# universal-agent-infra

./: .env.example  .gitignore  AUTONOMOUS_COMPANY_AGENT_BLUEPRINT.md  MOBIUS_ARCHITECTURE.md  README.md  SOFTWARE_ENGINEERING_GUIDE.md  WAKE_CYCLES.md  index.ts  package-lock.json  package.json  pnpm-lock.yaml
.github/workflows/: publish-python-sdk.yml
convex/: logs.ts  schema.ts
convex/_generated/: api.d.ts
docs/: README.md  docs.json  index.mdx  installation.mdx  quickstart.mdx  style.css
docs/concepts/: overview.mdx  wake-cycles.mdx
docs/guides/: agents-and-tasks.mdx  objectives.mdx  policy-and-approvals.mdx  runtime.mdx  streaming.mdx  swarms.mdx  tools.mdx
docs/reference/: exceptions.mdx  objective-api.mdx  sdk.mdx  tools-api.mdx
docs/server/: setup.mdx
modal/: README.md  modal_runner.py  run
python/: README.md  pyproject.toml
python/aeon/: __init__.py  agent.py  client.py  exceptions.py  models.py  objective.py  runtime.py  streaming.py  swarm.py  tools.py
python/mobius/: __init__.py  agent.py  cli.py  client.py  exceptions.py  models.py  runtime.py  swarm.py  tools.py
src/: agent-registry.ts  agent-run.ts  agent.ts  ai-summary.ts  api-server.ts  cli-main.ts  cli.ts  config.ts  logging.test.ts  logging.ts  main.ts  mobius-runtime.ts  objective-api.test.ts  objective-api.ts  objective-policy.ts  objective-runtime.test.ts  objective-runtime.ts  objective-service.ts  objective-store.test.ts  objective-store.ts  objective-types.ts  provider.ts  state.ts  system-prompt.ts  tool-registry.ts  tools.ts  ui-server.ts
tests/: test_sdk_install_e2e.py
