[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mobius-agents"
version = "0.1.0"
description = "Python SDK for Mobius universal agent infrastructure"
requires-python = ">=3.9"
dependencies = [
    "requests>=2.28.0",
    "websockets>=12.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["mobius*"]
