[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "aeon-sdk"
version = "0.1.0"
description = "Python SDK for durable, universal infinite-horizon agents."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "requests>=2.28.0",
    "websockets>=12.0",
]
keywords = ["agents", "sdk", "durable-agents", "infinite-horizon-agents"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

[project.urls]
Documentation = "https://github.com/mrTSB/universal-agent-infra/tree/main/docs"
Source = "https://github.com/mrTSB/universal-agent-infra"

[tool.setuptools.packages.find]
where = ["."]
include = ["aeon*"]
